--- a/angular-trello/src/app/components/trello-list/trello-list.component.scss
+++ b/angular-trello/src/app/components/trello-list/trello-list.component.scss
@@ -1,5 +1,5 @@
 .container {
-  overflow-x: scroll;
+  overflow-y: scroll;
   max-height: 600px;
 }
 
